# NeuroVMKR

./: CMakeLists.txt  FileLoadPage.qml  FileMovePage.qml  Main.qml  README.md  icons.qrc  main.cpp
components/: FileDragDrop.qml  TintedSVG.qml
qml/: FileLoadPage.qml  FileMovePage.qml  Main.qml
qml/components/: FileDragDrop.qml  VideoDragNDropGrid.qml  VideoThumbnail.qml
src/: main.cpp  videothumbnailprovider.cpp  videothumbnailprovider.h
src/utils/: videothumbnailprovider.cpp  videothumbnailprovider.h
